--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,4 +1,4 @@
-main: #GROUP#.#NAME#.#NAME#
+main: #GROUP#.#NAME#
 name: #NAME#
-authors: [PantherMan594, HYPExMon5ter]
+author: PantherMan594
 version: #VERSION#
